--- a/PhotoTextTranslator/PhotoTextTranslator/TakePhoto.xaml
+++ b/PhotoTextTranslator/PhotoTextTranslator/TakePhoto.xaml
@@ -6,6 +6,7 @@
         <StackLayout Orientation="Vertical">
             <Button Text="Take photo" Clicked="Button_Clicked" Margin="20,20,20,20"/>
             <StackLayout>
+                <Label x:Name="picSentence" HorizontalTextAlignment="Center" />
                 <Image x:Name="textPic" Aspect="AspectFit" />
             </StackLayout>            
         </StackLayout>        
