--- a/PhotoTextTranslator/PhotoTextTranslator/AnalysePhoto.xaml
+++ b/PhotoTextTranslator/PhotoTextTranslator/AnalysePhoto.xaml
@@ -4,7 +4,10 @@
              x:Class="PhotoTextTranslator.AnalysePhoto">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Analyse Photo Page" />
+            <Button x:Name="languages" Text="Select language"  Margin="20" Clicked="languages_Clicked"/>
+            <Label x:Name="selected" Margin="20,0,0,0"/>
+            <Button x:Name="translateButton" Text="Tanslate Text" Margin="20" Clicked="translateButton_Clicked" />
+            <Label x:Name="picSentence" HorizontalTextAlignment="Center" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
