--- a/PhotoTextTranslator/PhotoTextTranslator/AnalysePhoto.xaml
+++ b/PhotoTextTranslator/PhotoTextTranslator/AnalysePhoto.xaml
@@ -7,7 +7,10 @@
             <Button x:Name="languages" Text="Select language"  Margin="20" Clicked="languages_Clicked"/>
             <Label x:Name="selected" Margin="20,0,0,0"/>
             <Button x:Name="translateButton" Text="Tanslate Text" Margin="20" Clicked="translateButton_Clicked" />
+            <Label Text="Original" HorizontalTextAlignment="Center" />
             <Label x:Name="picSentence" HorizontalTextAlignment="Center" />
+            <Label Text="Translation" HorizontalTextAlignment="Center" />
+            <Label x:Name="translation" HorizontalTextAlignment="Center" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
